<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".ui.MainActivity"
    tools:ignore="HardcodedText">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/title"
        tools:textColor="@color/green_700"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="From"
        app:layout_constraintEnd_toEndOf="@+id/spFromCurrency"
        app:layout_constraintStart_toStartOf="@+id/spFromCurrency"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFrom"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:hint="Amount"
        app:layout_constraintBottom_toBottomOf="@+id/spFromCurrency"
        app:layout_constraintEnd_toStartOf="@+id/spFromCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spFromCurrency">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFrom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_convert"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="@+id/spFromCurrency"
        app:layout_constraintStart_toEndOf="@+id/tilFrom"
        app:layout_constraintTop_toBottomOf="@+id/spFromCurrency" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <Spinner
        android:id="@+id/spFromCurrency"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:entries="@array/currency_codes"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFrom" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="@+id/tilFrom"
        app:layout_constraintStart_toStartOf="@+id/tilFrom"
        app:layout_constraintTop_toBottomOf="@+id/tilFrom"
        tools:text="10 EUR = 15.0 USD"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rvGridView"
        app:layout_constraintEnd_toEndOf="@+id/rvGridView"
        app:layout_constraintStart_toStartOf="@+id/rvGridView"
        app:layout_constraintTop_toTopOf="@+id/rvGridView"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvGridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:numColumns="3"
        android:padding="5dp"
        android:verticalSpacing="5dp"
        android:layout_marginBottom="16dp"
        android:scrollIndicators="none"
        tools:itemCount="20"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        tools:listitem="@layout/item_currency_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        tools:targetApi="m" />

</androidx.constraintlayout.widget.ConstraintLayout>