<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_currency_item"
    android:padding="8dp"
    android:layout_margin="4dp">


    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="BDT"
        app:layout_constraintDimensionRatio="1:1"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="93.8706"
        android:textSize="16sp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvCountry"
        app:layout_constraintStart_toStartOf="@+id/tvCountry"
        app:layout_constraintTop_toBottomOf="@+id/tvCountry" />

</androidx.constraintlayout.widget.ConstraintLayout>