...
    <string name="app_name">CurrencyExchangeApp</string>
    <string name="title">Currency Converter</string>
    <string name="btn_convert">Update</string>
    <string-array name="currency_codes">
<!--        <item>Select</item>-->
        <item>USD</item>
        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>ANG</item>
        <item>AOA</item>
        <item>ARS</item>
...
